<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context=".ui.main.inbox.conversation.ConversationActivity">
    <!-- https://leakth.is/conversations/{conversation_id} -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semi_dark_color">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_conversation_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="4dp"
            android:layout_marginEnd="8dp"
            android:padding="4dp"
            android:src="@mipmap/avatar"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_conversation_title_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/activity_conversation_avatar"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:text="@string/messages"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/activity_conversation_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_conversation_title_message"
            android:layout_toEndOf="@id/activity_conversation_avatar"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#444444" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/activity_conversation_message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/semi_dark_color"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/activity_conversation_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circular_edittext"
                android:backgroundTint="@color/dark_gray"
                android:drawableStart="@drawable/ic_svg_speech_bubble_3"
                android:drawablePadding="12dp"
                android:drawableTint="#888888"
                android:hint="@string/send_message_here"
                android:maxLines="3"
                android:paddingEnd="56dp"
                android:gravity="top"
                android:imeOptions="actionSend"
                android:imeActionLabel="Send"
                android:textColor="@color/white"
                android:textColorHint="#666666" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/activity_conversation_send_message"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:tint="@color/white"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/gray_600"
                android:background="@drawable/circular_button"
                android:src="@drawable/ic_svg_paper_plane"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_conversation_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/activity_conversation_message_container"
            android:orientation="vertical"
            android:textSize="20sp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/view_holder_conversation_message" />

    </RelativeLayout>


</LinearLayout>